[project]
name = "altinity-agents"
version = "0.1.0"
description = "Agent service that enables users to develop Altinn apps with natural language"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
    "pydantic>=2.12.5",

    # HTTP client
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",

    # Configuration
    "python-dotenv>=1.2.2",

    # Git operations
    "GitPython>=3.1.46",

    # LLM & Agent framework
    "langgraph>=1.1.3",
    "langchain-core>=1.2.23",
    "langchain-openai>=1.1.12",
    "openai>=2.30.0",
    "anthropic>=0.86.0",

    # MCP client
    "fastmcp>=3.1.1",

    # Observability
    "langfuse>=3.0.0",

    # JSON repair for malformed LLM outputs
    "json-repair>=0.58.7",

    # YAML parsing for prompt frontmatter
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.15.0",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "api*", "shared*"]

[tool.setuptools.package-data]
agents = ["prompts/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
]
asyncio_mode = "auto"
