[project]
name = "altinity-mcp"
version = "0.1.0"
description = "MCP server with specialized tools for Altinn development"
readme = "README.md"
authors = [
    { name = "Daniel Skymoen", email = "danielskymoen02@gmail.com"},
    { name = "Edward Storlien", email = "edward.storlien@gmail.com"},
    { name = "Johanne Norland", email = "johannedn00@gmail.com"},
    { name = "Simen Waitz", email = "simen.myhre.waitz@accenture.com"},
    { name = "Nikolai M. Lunde", email = "nikolai.maaso.lunde@digdir.no"}
]
requires-python = ">=3.12"
dependencies = [
    "mcp==1.26.0",
    "fastmcp>=2.0.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.0",
    "python-dotenv==1.2.1",
    "fastapi==0.129.0",
    "uvicorn==0.40.0",
    "jinja2==3.1.6",
    "httpx==0.28.1",
    "typer==0.23.2",
    "python-multipart==0.0.22",
    "requests==2.32.5",
    "starlette==0.52.1",
    "typing-extensions==4.15.0",
    "anyio==4.12.1",
    "idna==3.11",
    "sniffio==1.3.1",
    "click==8.3.1",
    "h11==0.16.0",
    "markupsafe==3.0.3",
    "httpcore==1.0.9",
    "certifi==2025.11.12",
    "colorlog==6.10.1",
    "langchain==0.3.27",
    "langchain-core==0.3.81",
    "langchain-openai==0.3.35",
    "numpy>=1.25.0",
    "langgraph",
    "langwatch",
    "langfuse>=2.0.0",
    "jsonschema",
    "langchain-community",
    "scikit-learn>=1.3.0",
    "beautifulsoup4>=4.12.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.15.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server*", "codegen*"]

[project.scripts]
altinity-mcp = "server.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
]
