[project]
name = "altinity-mcp"
version = "0.1.0"
description = "MCP server with specialized tools for Altinn development"
readme = "README.md"
authors = [
    { name = "Daniel Skymoen", email = "danielskymoen02@gmail.com"},
    { name = "Edward Storlien", email = "edward.storlien@gmail.com"},
    { name = "Johanne Norland", email = "johannedn00@gmail.com"},
    { name = "Simen Waitz", email = "simen.myhre.waitz@accenture.com"},
    { name = "Nikolai M. Lunde", email = "nikolai.maaso.lunde@digdir.no"}
]
requires-python = ">=3.12"
dependencies = [
    # Core MCP framework
    "fastmcp>=3.1.1",
    "mcp>=1.26.0",

    # Server
    "uvicorn>=0.42.0",
    "starlette>=1.0.0",

    # Configuration & HTTP
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",

    # Schema validation
    "jsonschema>=4.26.0",

    # LLM & AI
    "langchain-core>=1.2.23",
    "langchain-openai>=1.1.14",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.3",
    "langfuse>=3.0.0",

    # Data & parsing
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "beautifulsoup4>=4.14.3",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.15.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server*", "codegen*"]

[project.scripts]
altinity-mcp = "server.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
]